[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Kyle Hipolito"]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
sqlmodel = "^0.0.24"
psycopg2 = ">=2.9.10,<3.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
