[tool.poetry]
name = "follow"
version = "0.1.0"
description = ""
authors = ["Kyle Hipolito"]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
common = { path = "../common/", develop = true }


[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
debugpy = "^1.8.16"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
